--- a/Test Portfolio/Index.html
+++ b/Test Portfolio/Index.html
@@ -73,12 +73,12 @@
                             <span class="link-text">Portfolio</span>
                         </a>
                     </li>
-                    <li>
+                    <!--<li>
                         <a href="#blog" class="nav-anim">
                             <span class="menu-icon lnr lnr-book"></span>
                             <span class="link-text">Blog</span>
                         </a>
-                    </li>
+                    </li>-->
                     <li>
                         <a href="#contact" class="nav-anim">
                             <span class="menu-icon lnr lnr-envelope"></span>
@@ -98,7 +98,7 @@
                 </div>
                 <div class="copyrights">Version 2.5 - © 2021 All rights reserved.</div>
             </header>
-            <!--TODO: Check how it looks on mobile-->
+            <!--TODO: Check how it looks on mobile, upload to azure-->
             <!-- Mobile Navigation -->
             <div class="menu-toggle">
                 <span></span>
@@ -797,7 +797,7 @@
 
                                             <figure class="item standard" data-groups='["category_all", "category_detailed"]'>
                                                 <div class="portfolio-item-img">
-                                                    <img src="img/portfolio/4.jpg" alt="Media Project 1" title="" />
+                                                    <img src="img/Untitled_Artwork 11.jpg" alt="Media Project 1" title="" />
                                                     <a href="portfolio-1.html" class="ajax-page-load"></a>
                                                 </div>
 
@@ -808,7 +808,8 @@
 
                                             <figure class="item standard" data-groups='["category_all", "category_detailed"]'>
                                                 <div class="portfolio-item-img">
-                                                    <img src="img/portfolio/4.jpg" alt="Media Project 1" title="" />
+                                                    <!--<img src="img/portfolio/4.jpg" alt="Media Project 1" title="" />-->
+                                                    <img src="img/Untitled_Artwork 9.jpg" alt="Media Project 1" title="" />
                                                     <a href="portfolio-2.html" class="ajax-page-load"></a>
                                                 </div>
 
@@ -819,18 +820,7 @@
 
                                             <figure class="item standard" data-groups='["category_all", "category_mockups"]'>
                                                 <div class="portfolio-item-img">
-                                                    <img src="img/portfolio/4.jpg" alt="Media Project 1" title="" />
-                                                    <a href="portfolio-1.html" class="ajax-page-load"></a>
-                                                </div>
-
-                                                <i class="far fa-file-alt"></i>
-                                                <h4 class="name">Taco Cat</h4>
-                                                <span class="category">Javascript Exercise</span>
-                                            </figure>
-
-                                            <figure class="item standard" data-groups='["category_all", "category_mockups"]'>
-                                                <div class="portfolio-item-img">
-                                                    <img src="img/portfolio/4.jpg" alt="Media Project 1" title="" />
+                                                    <img src="img/Untitled_Artwork 8.jpg" alt="Media Project 1" title="" />
                                                     <a href="portfolio-1.html" class="ajax-page-load"></a>
                                                 </div>
 
@@ -841,18 +831,29 @@
 
                                             <figure class="item standard" data-groups='["category_all", "category_mockups"]'>
                                                 <div class="portfolio-item-img">
-                                                    <img src="img/portfolio/4.jpg" alt="Media Project 1" title="" />
+                                                    <img src="img/Untitled_Artwork 10.jpg" alt="Media Project 1" title="" />
                                                     <a href="portfolio-1.html" class="ajax-page-load"></a>
                                                 </div>
 
                                                 <i class="far fa-file-alt"></i>
-                                                <h4 class="name">Building Height</h4>
+                                                <h4 class="name">Taco Cat</h4>
                                                 <span class="category">Javascript Exercise</span>
                                             </figure>
 
                                             <figure class="item standard" data-groups='["category_all", "category_mockups"]'>
                                                 <div class="portfolio-item-img">
-                                                    <img src="img/portfolio/4.jpg" alt="Media Project 1" title="" />
+                                                    <img src="img/Untitled_Artwork 7.jpg" alt="Media Project 1" title="" />
+                                                    <a href="portfolio-1.html" class="ajax-page-load"></a>
+                                                </div>
+
+                                                <i class="far fa-file-alt"></i>
+                                                <h4 class="name">Sunset Hills</h4>
+                                                <span class="category">Javascript Exercise</span>
+                                            </figure>
+
+                                            <figure class="item standard" data-groups='["category_all", "category_mockups"]'>
+                                                <div class="portfolio-item-img">
+                                                    <img src="img/Untitled_Artwork 6.jpg" alt="Media Project 1" title="" />
                                                     <a href="portfolio-1.html" class="ajax-page-load"></a>
                                                 </div>
 
@@ -870,9 +871,10 @@
                     </section>
                     <!-- End of Portfolio Subpage -->
 
+                    <!--TODO: Link blog, more blog entries-->
+
                     <!-- Blog Subpage -->
                     <section data-id="blog" class="animated-section">
-                        <!--TODO: Link blog, more blog entries-->
                         <div class="page-title">
                             <h2>Blog</h2>
                         </div>
@@ -977,7 +979,6 @@
 
                     <!-- Contact Subpage -->
                     <section data-id="contact" class="animated-section">
-                        <!--TODO: Working Contact Form-->
                         <div class="page-title">
                             <h2>Contact</h2>
                         </div>
@@ -1008,19 +1009,19 @@
                                         <span class="lm-info-block-text"></span>
                                     </div>
 
-                                    <div class="lm-info-block gray-default">
+                                    <!--<div class="lm-info-block gray-default">
                                         <i class="lnr lnr-checkmark-circle"></i>
                                         <h4>Freelance Available</h4>
                                         <span class="lm-info-block-value"></span>
                                         <span class="lm-info-block-text"></span>
-                                    </div>
+                                    </div>-->
 
 
                                 </div>
                                 <!-- End of Contact Info -->
                                 <!-- Contact Form -->
                                 <div class="col-xs-12 col-sm-8">
-                                    <div id="map" class="map"></div>
+                                    <!--<div id="map" class="map"></div>-->
                                     <div class="block-title">
                                         <h3>How Can I <span>Help You?</span></h3>
                                     </div>
@@ -1064,7 +1065,7 @@
                                             </div>
 
                                             <div class="g-recaptcha" data-sitekey="6LdqmCAUAAAAAMMNEZvn6g4W5e0or2sZmAVpxVqI"></div>
-
+                                            <!--TODO: Working Contact Form-->
                                             <input type="submit" class="button btn-send" value="Send message">
                                         </div>
                                     </form>
