Polish and edits

--- a/Test Portfolio/Index.html
+++ b/Test Portfolio/Index.html
@@ -134,7 +134,7 @@
                                             </div>
 
                                             <div class="item">
-                                                <div class="sp-subtitle" style="color:black">Board Certified Behavior Scientist</div>
+                                                <div class="sp-subtitle" style="color:black">Board Certified Behavioral Scientist</div>
                                             </div>
                                         </div>
                                     </div>
@@ -156,9 +156,9 @@
                                 <div class="col-xs-12 col-sm-7">
                                     <p>
                                         Originally from a small town in Connecticut, I have spent a decade living in
-                                        the Middle East studying applied behavior science and its impact on consumer experience and outcomes.
-                                        I am now developing websites with the foundations of behavior science in mind.
-                                        From back end to front end, my design principles incorporate evdence-based practices
+                                        the Middle East studying Applied Behavioral Analysis and its impact on consumer experience and outcomes.
+                                        I am now developing websites and applications that leverage the principles of behavior and business.
+                                        From back end to front end, my designs incorporate evdence-based practices
                                         to optimize functionality for the end user.
                                     </p>
                                 </div>
@@ -225,7 +225,7 @@
                                                 </div>
                                                 <div class="ci-text">
                                                     <h4>Consumer Impact</h4>
-                                                    <p>Incorporating relevant aspects of behavior science to understand, predict, and influence the actions taken by clients and customers.</p>
+                                                    <p>Incorporating relevant aspects of behavioral science to understand, predict, and influence the actions taken by clients and customers.</p>
                                                 </div>
                                             </div>
                                         </div>
@@ -469,7 +469,7 @@
                                 <div class="col-xs-12 col-sm-4">
                                     <div class="fun-fact gray-default">
                                         <i class="lnr lnr-briefcase"></i>
-                                        <h4>Number of Counrties in Which I've Lived and Worked</h4>
+                                        <h4>Number of Countries in Which I've Lived and Worked</h4>
                                         <span class="fun-fact-block-value">7+</span>
                                         <span class="fun-fact-block-text"></span>
                                     </div>
@@ -812,7 +812,7 @@
                                             <figure class="item standard" data-groups='["category_all", "category_mockups"]'>
                                                 <div class="portfolio-item-img">
                                                     <img src="img/Untitled_Artwork 8.jpg" alt="Media Project 1" title="" />
-                                                    <a href="portfolio-1.html" class="ajax-page-load"></a>
+                                                    <a href="https://jeremysteward-cf-2.netlify.app/" target="_blank"></a>
                                                 </div>
 
                                                 <i class="far fa-file-alt"></i>
@@ -823,7 +823,7 @@
                                             <figure class="item standard" data-groups='["category_all", "category_mockups"]'>
                                                 <div class="portfolio-item-img">
                                                     <img src="img/Untitled_Artwork 10.jpg" alt="Media Project 1" title="" />
-                                                    <a href="portfolio-1.html" class="ajax-page-load"></a>
+                                                    <a href="https://jeremysteward-cf-1.netlify.app/" target="_blank"></a>
                                                 </div>
 
                                                 <i class="far fa-file-alt"></i>
@@ -834,7 +834,7 @@
                                             <figure class="item standard" data-groups='["category_all", "category_mockups"]'>
                                                 <div class="portfolio-item-img">
                                                     <img src="img/Untitled_Artwork 7.jpg" alt="Media Project 1" title="" />
-                                                    <a href="portfolio-1.html" class="ajax-page-load"></a>
+                                                    <a href="https://jeremysteward-cf-4.netlify.app/" target="_blank"></a>
                                                 </div>
 
                                                 <i class="far fa-file-alt"></i>
@@ -845,7 +845,7 @@
                                             <figure class="item standard" data-groups='["category_all", "category_mockups"]'>
                                                 <div class="portfolio-item-img">
                                                     <img src="img/Untitled_Artwork 6.jpg" alt="Media Project 1" title="" />
-                                                    <a href="portfolio-1.html" class="ajax-page-load"></a>
+                                                    <a href="https://jeremysteward-cf-3.netlify.app/" target="_blank"></a>
                                                 </div>
 
                                                 <i class="far fa-file-alt"></i>
