--- a/Test Portfolio/portfolio-2.html
+++ b/Test Portfolio/portfolio-2.html
@@ -2,8 +2,8 @@
     <div class="ajax-page-wrapper">
         <div class="ajax-page-nav">
             <div class="nav-item ajax-page-prev-next">
-                <a class="ajax-page-load" href="portfolio-3.html"><i class="lnr lnr-chevron-left"></i></a>
-                <a class="ajax-page-load" href="portfolio-2.html"><i class="lnr lnr-chevron-right"></i></a>
+                <!--<a class="ajax-page-load" href="portfolio-3.html"><i class="lnr lnr-chevron-left"></i></a>
+                <a class="ajax-page-load" href="portfolio-2.html"><i class="lnr lnr-chevron-right"></i></a>-->
             </div>
             <div class="nav-item ajax-page-close-button">
                 <a id="ajax-page-close-button" href="#"><i class="lnr lnr-cross"></i></a>
@@ -18,13 +18,13 @@
             <div class="col-sm-8 col-md-8 portfolio-block">
                 <div class="owl-carousel portfolio-page-carousel">
                     <div class="item">
-                        <img src="img/portfolio/full/1.jpg" alt="" />
+                        <img src="img/Screen Shot 2021-06-16 at 8.42.26 PM.png" alt="" />
                     </div>
                     <div class="item">
-                        <img src="img/portfolio/full/2.jpg" alt="" />
+                        <img src="img/Screen Shot 2021-06-16 at 8.45.19 PM.png" alt="" />
                     </div>
                     <div class="item">
-                        <img src="img/portfolio/full/3.jpg" alt="" />
+                        <img src="img/Screen Shot 2021-06-16 at 8.48.26 PM.png" alt="" />
                     </div>
                 </div>
 
@@ -58,23 +58,27 @@
                     </div>
                     <ul class="project-general-info">
                         <li><p><i class="fa fa-user"></i> Jeremy Steward</p></li>
-                        <li><p><i class="fa fa-globe"></i> <a href="#" target="_blank">Link to Website</a></p></li>
+                        <li><p><i class="fa fa-globe"></i> <a href="https://jsbugtracker.azurewebsites.net/" target="_blank">Link to Website</a></p></li>
                         <li><p><i class="fa fa-calendar"></i> Late 2020</p></li>
                     </ul>
 
-                    <p class="text-justify">The goal of this project was to etc. etc. etc. etc.</p>
+                    <p class="text-justify">The goal of this project was to create a bug tracking application as an exercise in MVC structuring. Users will be able to track the status of tickets submitted by members of the team, as well as additional functions related to assigning tickets depending on the user's given role.</p>
                     <!-- /Project Description -->
                     <!-- Technology -->
                     <div class="tags-block">
                         <div class="block-title">
-                            <h3>Technology</h3>
+                            <h3>Technology Used</h3>
                         </div>
                         <ul class="tags">
-                            <li><a>HTML5</a></li>
-                            <li><a>CSS3</a></li>
-                            <li><a>jQuery</a></li>
+                            <li><a>Bootstrap</a></li>
+                            <li><a>SQL</a></li>
+                            <li><a>Github</a></li>
+                            <li><a>Entity Framework</a></li>
+                            <li><a>LINQ</a></li>
+                            <li><a>Micrsoft Azure</a></li>
                             <li><a>Javascript</a></li>
                             <li><a>C#</a></li>
+                            <li><a>ASP.NET</a></li>
                         </ul>
                     </div>
                     <!-- /Technology -->
