--- a/Test Portfolio/portfolio-1.html
+++ b/Test Portfolio/portfolio-1.html
@@ -2,8 +2,8 @@
     <div class="ajax-page-wrapper">
         <div class="ajax-page-nav">
             <div class="nav-item ajax-page-prev-next">
-                <a class="ajax-page-load" href="portfolio-3.html"><i class="lnr lnr-chevron-left"></i></a>
-                <a class="ajax-page-load" href="portfolio-2.html"><i class="lnr lnr-chevron-right"></i></a>
+                <!--<a class="ajax-page-load" href="portfolio-3.html"><i class="lnr lnr-chevron-left"></i></a>-->
+                <!--<a class="ajax-page-load" href="portfolio-2.html"><i class="lnr lnr-chevron-right"></i></a>-->
             </div>
             <div class="nav-item ajax-page-close-button">
                 <a id="ajax-page-close-button" href="#"><i class="lnr lnr-cross"></i></a>
@@ -18,7 +18,7 @@
             <div class="col-sm-8 col-md-8 portfolio-block">
                 <div class="owl-carousel portfolio-page-carousel">
                     <div class="item">
-                        <img src="img/CleanShot 2021-03-08 at 16.41.50@2x.png" alt="" />
+                        <img src="img/FinPortalSS.png" alt="" />
                     </div>
                     <div class="item">
                         <img src="img/portfolio/full/2.jpg" alt="" />
@@ -58,24 +58,28 @@
                     </div>
                     <ul class="project-general-info">
                         <li><p><i class="fa fa-user"></i> Jeremy Steward</p></li>
-                        <li><p><i class="fa fa-globe"></i> <a href="#" target="_blank">Link to Website</a></p></li>
+                        <li><p><i class="fa fa-globe"></i> <a href="htts://financialportaljs.azurewebsites.net/" target="_blank">Link to Website</a></p></li>
                         <li><p><i class="fa fa-calendar"></i> Early 2021</p></li>
                     </ul>
 
-                    <p class="text-justify">The goal of this project was to etc. etc. etc. etc.</p>
+                    <p class="text-justify">The goal of this project was to create a finacial management application that organizes all of the transactions within a household according to categories, budgets, bank accounts, and members.</p>
                     <!-- /Project Description -->
 
                     <!-- Technology -->
                     <div class="tags-block">
                         <div class="block-title">
-                            <h3>Technology</h3>
+                            <h3>Technology Used</h3>
                         </div>
                         <ul class="tags">
-                            <li><a>HTML5</a></li>
-                            <li><a>CSS3</a></li>
-                            <li><a>jQuery</a></li>
+                            <li><a>Bootstrap</a></li>
+                            <li><a>SQL</a></li>
+                            <li><a>Github</a></li>
+                            <li><a>Entity Framework</a></li>
+                            <li><a>LINQ</a></li>
+                            <li><a>Micrsoft Azure</a></li>
                             <li><a>Javascript</a></li>
                             <li><a>C#</a></li>
+                            <li><a>ASP.NET</a></li>
                         </ul>
                     </div>
                     <!-- /Technology -->
