--- a/Test Portfolio/portfolio-1.html
+++ b/Test Portfolio/portfolio-1.html
@@ -21,10 +21,10 @@
                         <img src="img/FinPortalSS.png" alt="" />
                     </div>
                     <div class="item">
-                        <img src="img/portfolio/full/2.jpg" alt="" />
+                        <img src="img/Screen Shot 2021-06-16 at 10.28.07 PM.png" alt="" />
                     </div>
                     <div class="item">
-                        <img src="img/portfolio/full/3.jpg" alt="" />
+                        <img src="img/Screen Shot 2021-06-16 at 10.29.39 PM.png" alt="" />
                     </div>
                 </div>
 
