--- a/Test Portfolio/portfolio-1.html
+++ b/Test Portfolio/portfolio-1.html
@@ -58,7 +58,7 @@
                     </div>
                     <ul class="project-general-info">
                         <li><p><i class="fa fa-user"></i> Jeremy Steward</p></li>
-                        <li><p><i class="fa fa-globe"></i> <a href="htts://financialportaljs.azurewebsites.net/" target="_blank">Link to Website</a></p></li>
+                        <li><p><i class="fa fa-globe"></i> <a href="https://financialportaljs.azurewebsites.net/" target="_blank">Link to Website</a></p></li>
                         <li><p><i class="fa fa-calendar"></i> Early 2021</p></li>
                     </ul>
 
