--- a/Test Portfolio/Index.html
+++ b/Test Portfolio/Index.html
@@ -793,7 +793,7 @@
                                                 </div>
 
                                                 <i class="far fa-file-alt"></i>
-                                                <h4 class="name">Financial Portal</h4>
+                                                <h4 class="name"><b>NEW:</b> Financial Portal</h4>
                                                 <span class="category">Full Application</span>
                                             </figure>
 
