--- a/Test Portfolio/Index.html
+++ b/Test Portfolio/Index.html
@@ -853,22 +853,22 @@
                                                 <span class="category">Javascript Exercise</span>
                                             </figure>
 
-                                            <figure class="item standard" data-groups='["category_all", "category_mockups"]'>
+                                            <!--<figure class="item standard" data-groups='["category_all", "category_mockups"]'>
                                                 <div class="portfolio-item-img">
                                                     <img src="img/Untitled_Artwork 7.jpg" alt="Media Project 1" title="" />
                                                     <a href="https://jeremysteward-cf-4.netlify.app/" target="_blank"></a>
                                                 </div>
 
-                                                <!--<i class="far fa-file-alt"></i>
+                                                <i class="far fa-file-alt"></i>
                                                 <h4 class="name">Sunset Hills</h4>
                                                 <span class="category">Javascript Exercise</span>
-                                            </figure>
+                                            </figure>-->
 
                                             <figure class="item standard" data-groups='["category_all", "category_mockups"]'>
                                                 <div class="portfolio-item-img">
                                                     <img src="img/Untitled_Artwork 6.jpg" alt="Media Project 1" title="" />
                                                     <a href="https://jeremysteward-cf-3.netlify.app/" target="_blank"></a>
-                                                </div>-->
+                                                </div>
 
                                                 <i class="far fa-file-alt"></i>
                                                 <h4 class="name">Fizz Buzz</h4>
