--- a/Test Portfolio/Index.html
+++ b/Test Portfolio/Index.html
@@ -810,15 +810,15 @@
                                             </figure>
 
                                             <!--<figure class="item standard" data-groups='["category_all", "category_mockups"]'>
-                                                <div class="portfolio-item-img">
-                                                    <img src="img/Untitled_Artwork 8.jpg" alt="Media Project 1" title="" />
-                                                    <a href="https://jeremysteward-cf-2.netlify.app/" target="_blank"></a>
-                                                </div>
+        <div class="portfolio-item-img">
+            <img src="img/Untitled_Artwork 8.jpg" alt="Media Project 1" title="" />
+            <a href="https://jeremysteward-cf-2.netlify.app/" target="_blank"></a>
+        </div>
 
-                                                <i class="far fa-file-alt"></i>
-                                                <h4 class="name">Sum of All Fears</h4>
-                                                <span class="category">Javascript Exercise</span>
-                                            </figure>-->
+        <i class="far fa-file-alt"></i>
+        <h4 class="name">Sum of All Fears</h4>
+        <span class="category">Javascript Exercise</span>
+    </figure>-->
 
                                             <figure class="item standard" data-groups='["category_all", "category_mockups"]'>
                                                 <div class="portfolio-item-img">
@@ -842,6 +842,28 @@
                                                 <span class="category">Javascript Exercise</span>
                                             </figure>
 
+                                            <!--<figure class="item standard" data-groups='["category_all", "category_mockups"]'>
+        <div class="portfolio-item-img">
+            <img src="img/Untitled_Artwork 7.jpg" alt="Media Project 1" title="" />
+            <a href="https://jeremysteward-cf-4.netlify.app/" target="_blank"></a>
+        </div>
+
+        <i class="far fa-file-alt"></i>
+        <h4 class="name">Sunset Hills</h4>
+        <span class="category">Javascript Exercise</span>
+    </figure>-->
+
+                                            <figure class="item standard" data-groups='["category_all", "category_mockups"]'>
+                                                <div class="portfolio-item-img">
+                                                    <img src="img/Untitled_Artwork 6.jpg" alt="Media Project 1" title="" />
+                                                    <a href="https://jasteward-fizzbuzz.netlify.app/" target="_blank"></a>
+                                                </div>
+
+                                                <i class="far fa-file-alt"></i>
+                                                <h4 class="name">Fizz Buzz</h4>
+                                                <span class="category">Javascript Exercise</span>
+                                            </figure>
+
                                             <figure class="item standard" data-groups='["category_all", "category_mockups"]'>
                                                 <div class="portfolio-item-img">
                                                     <img src="img/jbjbbj.png" alt="Media Project 1" title="" />
@@ -850,28 +872,6 @@
 
                                                 <i class="far fa-file-alt"></i>
                                                 <h4 class="name">Rewind</h4>
-                                                <span class="category">Javascript Exercise</span>
-                                            </figure>
-
-                                            <!--<figure class="item standard" data-groups='["category_all", "category_mockups"]'>
-                                                <div class="portfolio-item-img">
-                                                    <img src="img/Untitled_Artwork 7.jpg" alt="Media Project 1" title="" />
-                                                    <a href="https://jeremysteward-cf-4.netlify.app/" target="_blank"></a>
-                                                </div>
-
-                                                <i class="far fa-file-alt"></i>
-                                                <h4 class="name">Sunset Hills</h4>
-                                                <span class="category">Javascript Exercise</span>
-                                            </figure>-->
-
-                                            <figure class="item standard" data-groups='["category_all", "category_mockups"]'>
-                                                <div class="portfolio-item-img">
-                                                    <img src="img/Untitled_Artwork 6.jpg" alt="Media Project 1" title="" />
-                                                    <a href="https://jeremysteward-cf-3.netlify.app/" target="_blank"></a>
-                                                </div>
-
-                                                <i class="far fa-file-alt"></i>
-                                                <h4 class="name">Fizz Buzz</h4>
                                                 <span class="category">Javascript Exercise</span>
                                             </figure>
 
