--- a/Test Portfolio/Index.html
+++ b/Test Portfolio/Index.html
@@ -834,7 +834,7 @@
                                             <figure class="item standard" data-groups='["category_all", "category_mockups"]'>
                                                 <div class="portfolio-item-img">
                                                     <img src="img/Untitled_Artwork 10.jpg" alt="Media Project 1" title="" />
-                                                    <a href="https://jeremysteward-cf-1.netlify.app/" target="_blank"></a>
+                                                    <a href="https://jasteward-tacocat.netlify.app" target="_blank"></a>
                                                 </div>
 
                                                 <i class="far fa-file-alt"></i>
