--- a/Test Portfolio/Index.html
+++ b/Test Portfolio/Index.html
@@ -94,7 +94,7 @@
                 </div>
 
                 <div class="header-buttons">
-                    <a href="img/Jeremy Steward FINAL Resume (1).pdf" target="_blank" class="btn btn-primary">Download CV</a>
+                    <a href="img/Jeremy Steward Resume.pdf" target="_blank" class="btn btn-primary">Download CV</a>
                 </div>
                 <div class="copyrights">Version 2.5 - © 2021 All rights reserved.</div>
             </header>
@@ -789,11 +789,22 @@
                                             <figure class="item standard" data-groups='["category_all", "category_detailed"]'>
                                                 <div class="portfolio-item-img">
                                                     <img src="img/Untitled_Artwork 11.jpg" alt="Media Project 1" title="" />
+                                                    <a href="https://remybugtracker2021.herokuapp.com/" class="ajax-page-load"></a>
+                                                </div>
+
+                                                <i class="far fa-file-alt"></i>
+                                                <h4 class="name"><b>NEW:</b> Issue Tracker</h4>
+                                                <span class="category">Full Application</span>
+                                            </figure>
+
+                                            <figure class="item standard" data-groups='["category_all", "category_detailed"]'>
+                                                <div class="portfolio-item-img">
+                                                    <img src="img/Untitled_Artwork 11.jpg" alt="Media Project 1" title="" />
                                                     <a href="portfolio-1.html" class="ajax-page-load"></a>
                                                 </div>
 
                                                 <i class="far fa-file-alt"></i>
-                                                <h4 class="name"><b>NEW:</b> Financial Portal</h4>
+                                                <h4 class="name"> Financial Portal</h4>
                                                 <span class="category">Full Application</span>
                                             </figure>
 
