--- a/Test Portfolio/Index.html
+++ b/Test Portfolio/Index.html
@@ -788,8 +788,8 @@
 
                                             <figure class="item standard" data-groups='["category_all", "category_detailed"]'>
                                                 <div class="portfolio-item-img">
-                                                    <img src="img/Untitled_Artwork 11.jpg" alt="Media Project 1" title="" />
-                                                    <a href="https://remybugtracker2021.herokuapp.com/" class="ajax-page-load"></a>
+                                                    <img src="img/helpticketimg.png" alt="Media Project 1" title="" />
+                                                    <a href="portfolio-3.html" class="ajax-page-load"></a>
                                                 </div>
 
                                                 <i class="far fa-file-alt"></i>
