--- a/Test Portfolio/Index.html
+++ b/Test Portfolio/Index.html
@@ -94,7 +94,7 @@
                 </div>
 
                 <div class="header-buttons">
-                    <a href="img/Jeremy Steward Resume.pdf" target="_blank" class="btn btn-primary">Download CV</a>
+                    <a href="img/Jeremy Steward Resume 2021.pdf" target="_blank" class="btn btn-primary">Download CV</a>
                 </div>
                 <div class="copyrights">Version 2.5 - © 2021 All rights reserved.</div>
             </header>
