--- a/Test Portfolio/portfolio-3.html
+++ b/Test Portfolio/portfolio-3.html
@@ -21,10 +21,10 @@
                         <img src="img/bugtrack4.png" alt="" />
                     </div>
                     <div class="item">
-                        <img src="img/bugtrack2.png" alt="" />
+                        <img src="img/CleanShot 2021-11-09 at 16.48.38@2x.png" />
                     </div>
                     <div class="item">
-                        <img src="img/bugtrack3.png" alt="" />
+                        <img src="img/Screen Shot 2021-11-09 at 4.47.50 PM.png" />
                     </div>
                 </div>
 
