--- a/Test Portfolio/portfolio-3.html
+++ b/Test Portfolio/portfolio-3.html
@@ -75,10 +75,10 @@
                             <li><a>Github</a></li>
                             <li><a>Entity Framework</a></li>
                             <li><a>LINQ</a></li>
-                            <li><a>Micrsoft Azure</a></li>
+                            <li><a>Heroku</a></li>
                             <li><a>Javascript</a></li>
                             <li><a>C#</a></li>
-                            <li><a>ASP.NET</a></li>
+                            <li><a>ASP.NET Core</a></li>
                         </ul>
                     </div>
                     <!-- /Technology -->
